--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,17 +13,23 @@ pipeline {
                 }
             }
         }
-        stage('Deploy to Docker Host') {
-            steps {
-                withDockerHost([
-                    url: 'unix:///var/run/docker.sock'
-
-                ]) {
-                    script {
-                        docker.image("quiz-app:latest").push("latest")
-                    }
-                }
-            }
+        stage('Test Docker Container') {
+      steps {
+        script {
+          docker.image("quiz-app:latest").inside {
+            sh 'python tests.py'
+          }
         }
+      }
+    }
+        stage('Deploy to Docker Desktop') {
+      steps {
+        script {
+          sh 'docker stop quiz-app || true'
+          sh 'docker rm quiz-app || true'
+          sh 'docker run --name quiz-app -d -p 8080:80 quiz-app:latest'
+        }
+      }
+    }
     }
 }
