--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Clone The Repository') {
             steps {
-                git 'https://github.com/rajshamz/quiz-app.git'
+                git 'https://github.com/tekraveconsulting/quizapp.git'
             }
         }
         stage('Build Docker Container') {
