--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,6 @@
 pipeline {
     
-    agent {
-        docker {
-            image 'node:14.20'
-            args '--file Dockerfile'
-        }
+    agent any
     }
     stages {
         stage('Clone Repository') {
