--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,7 +1,11 @@
 pipeline {
     
-    agent any
-
+    //agent any
+    agent {
+        dockerfile {
+            dir 'jenkins'
+        }
+    }
     stages {
         //stage('Clone Repository') {
         //    steps {
