--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,8 +19,8 @@ pipeline {
         }
         stage('Build') {
             steps {
-                sh 'pip install --user -r requirements.txt'
-                sh 'python setup.py sdist bdist_wheel'
+                sh 'sudo pip install -r requirements.txt'
+                sh 'sudo python setup.py sdist bdist_wheel'
             }
         }
         //stage('Deploy to Artifactory') {
