--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
     
+    environment {
+        IMG_TAG="${sh(script: 'echo \$GIT_COMMIT | cut -c -7 | tr -d \'[:space:]\' ', returnStdout: true ) }.$BUILD_ID"
+        APP_NAME="QuizApp"
+    }
     //agent any
     agent {
         dockerfile {
@@ -19,8 +23,9 @@ pipeline {
         }
         stage('Build') {
             steps {
-                sh 'pip install -r requirements.txt'
-                sh 'python setup.py sdist bdist_wheel'
+                script {
+                    QuizAppImage = docker.build("$APP_NAME:$IMG_TAG", ".")
+                }
             }
         }
         //stage('Deploy to Artifactory') {
