--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh 'pip3 install --user -r requirements.txt'
-                sh 'python setup.py sdist bdist_wheel'
+                sh 'python3 setup.py sdist bdist_wheel'
             }
         }
         //stage('Deploy to Artifactory') {
