--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,8 +23,8 @@ pipeline {
         }
         stage('Build') {
             steps {
-                sh 'pip3 install --user -r requirements.txt'
-                sh 'python3 setup.py sdist bdist_wheel'
+                sh 'sudo -H pip3 install -r requirements.txt'
+                sh 'sudo -H python3 setup.py sdist bdist_wheel'
             }
         }
         //stage('Deploy to Artifactory') {
