--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
     
-    //environment {
-    //    IMG_TAG="${sh(script: 'echo \$GIT_COMMIT | cut -c -7 | tr -d \'[:space:]\' ', returnStdout: true ) }.$BUILD_ID"
-    //    APP_NAME="quizapp"
-    //}
+    environment {
+        IMG_TAG="${sh(script: 'echo \$GIT_COMMIT | cut -c -7 | tr -d \'[:space:]\' ', returnStdout: true ) }.$BUILD_ID"
+        APP_NAME="quizapp"
+    }
     agent any
     //agent {
     //    dockerfile {
@@ -24,7 +24,7 @@ pipeline {
         stage('Build') {
             steps {
                 script {
-                    def app = docker.build("quiz-app:latest", ".")
+                    QuizAppImage = docker.build("$APP_NAME:$IMG_TAG", ".")
                 }
             }
         }
