--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -28,6 +28,33 @@ pipeline {
                 }
             }
         }
+        stage('Publish and Deploy') {
+            when {
+                anyOf {
+                    branch 'master'
+                    branch 'dev'
+                }
+            }
+            steps {
+                script {
+                    switch(BRANCH_NAME) {
+                      case ["master", "dev"]:  // Deployment steps for Master and Dev
+                        env.DOCKER_REGISTRY        = "https://192.168.0.120:4443"
+                        env.DOCKER_REGISTRY_HOST   = "192.168.0.120"
+                        env.DOCKER_REGISTRY_SECRET = "DockerRegistry"
+
+                        docker.withRegistry('https://192.168.0.120:4443', 'DockerRegistry') {
+                            QuizAppImage.push()
+                        }
+
+                        withCredentials([usernamePassword(credentialsId: 'DockerRegistry', passwordVariable: 'REGISTRY_PASS', usernameVariable: 'REGISTRY_USER')]) {
+                            AnsibleDeploy()
+                        }
+                        break
+                }
+            }
+        }
+     }
         //stage('Deploy to Artifactory') {
         //    steps {
         //        withCredentials([usernamePassword(credentialsId: 'your-artifactory-credentials-id', passwordVariable: 'ARTIFACTORY_PASSWORD', usernameVariable: 'ARTIFACTORY_USERNAME')]) {
