--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,3 +1,8 @@
+def AnsibleDeploy(){
+    sh 'touch hosts.ini && echo ${hosts_ini} | base64 --decode > hosts.ini'
+    sh 'ANSIBLE_HOST_KEY_CHECKING=false ansible-playbook -i hosts.ini ansible/playbook.yml'
+}
+
 pipeline {
     
     environment {
