--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -41,6 +41,11 @@ pipeline {
                 }
             }
             steps {
+                        withCredentials([file(credentialsId: 'quizapp-master', variable: 'PIPELINE_ENV')]) { load "$PIPELINE_ENV"}
+                        sh 'echo pwd'
+                    }
+                }
+            steps {
                 script {
                     switch(BRANCH_NAME) {
                       case ["master", "dev"]:  // Deployment steps for Master and Dev
