--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -33,6 +33,25 @@ pipeline {
                 }
             }
         }
+        stage('Inject environment Variables') {
+            parallel{
+                stage('to dev') {
+                    when { branch 'dev' }
+                    steps {
+                        withCredentials([file(credentialsId: 'quizapp-dev', variable: 'PIPELINE_ENV')]) { load "$PIPELINE_ENV"}
+                        sh 'echo pwd'
+                    }
+                }
+
+                stage('master'){
+                    when {branch 'master'}
+                    steps{
+                        withCredentials([file(credentialsId: 'quizapp-master', variable: 'PIPELINE_ENV')]) { load "$PIPELINE_ENV"}
+                        sh 'echo pwd'
+                    }
+                }
+            }
+        }
         stage('Publish and Deploy') {
             when {
                 anyOf {
@@ -40,10 +59,6 @@ pipeline {
                     branch 'dev'
                 }
             }
-            steps {
-                        withCredentials([file(credentialsId: 'quizapp-master', variable: 'PIPELINE_ENV')]) { load "$PIPELINE_ENV"}
-                        sh 'echo pwd'
-                    }
             steps {
                 script {
                     switch(BRANCH_NAME) {
