--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     environment {
         IMG_TAG="${sh(script: 'echo \$GIT_COMMIT | cut -c -7 | tr -d \'[:space:]\' ', returnStdout: true ) }.$BUILD_ID"
         APP_NAME="quizapp"
-        APP_LOGS="/var/lib/docker/quizapp"
+        APP_LOGS="/var/log"
     }
     agent any
     //agent {
